Adding GeoMesa raster integration to GeoServer