@@ -7,132 +7,75 @@ application directory.
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-  <modelVersion>4.0.0</modelVersion>
+   <modelVersion>4.0.0</modelVersion>
 
-  <parent>
-    <groupId>org.geoserver</groupId>
-    <artifactId>community</artifactId>
+    <parent>
+        <groupId>org.geoserver</groupId>
+        <artifactId>community</artifactId>
+        <version>2.8-SNAPSHOT</version>
+    </parent>
+
+    <groupId>org.geoserver.community</groupId>
+    <artifactId>geomesa-gs</artifactId>
     <version>2.8-SNAPSHOT</version>
-  </parent>
+    <packaging>jar</packaging>
 
-  <groupId>org.geoserver.community</groupId>
-  <artifactId>gs-web-geomesa</artifactId>
-  <packaging>jar</packaging>
-  <version>2.8-SNAPSHOT</version>  
-  <name>GeoMesa Web Module</name>
+    <name>GeoMesa GeoServer Community Module</name>
+    <description>GeoMesa GeoServer Community Module</description>
 
-  <description>GeoMesa GeoServer extensions</description>
-  <developers>
-    <developer>
-      <name>Anthony Fox<name>
-      <organization>LocationTech</organization>
-    </developer>
-    <developer>
-      <name>Jim Hughes</name>
-      <organization>LocationTech</organization>
-    </developer>
-  </developers>
+    <developers>
+        <developer>
+            <name>Anthony Fox</name>
+            <organization>LocationTech</organization>
+        </developer>
+        <developer>
+            <name>Jim Hughes</name>
+            <organization>LocationTech</organization>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:git@github.com:geoserver/geoserver.git</connection>
+        <developerConnection>scm:git:git@github.com:geoserver/geoserver.git</developerConnection>
+        <url>https://github.com/geoserver/geoserver/</url>
+        <tag>HEAD</tag>
+    </scm>
 
     <properties>
-        <geomesa.version>1.0.0-rc.2</geomesa.version>
-        <scala.version>2.10.4</scala.version>
+        <geomesa.version>1.2.0-SNAPSHOT</geomesa.version>
+        <scala.version>2.11.7</scala.version>
 
-        <!-- environment-dependent versions -->
-        <zookeeper.version>3.4.5</zookeeper.version>
-        <accumulo.version>1.5.1</accumulo.version>
-        <hadoop.version>2.2.0</hadoop.version>
-
-        <!-- logging properties
-             we expect logging jars to be provided -->
-        <!-- accumulo 1.4.3 is incompatible with a 1.5.6+ version of slf4j -->
-        <!-- 1.7.x is for hadoop 2 and accumulo 1.5.x -->
         <slf4j.version>1.7.5</slf4j.version>
-        <scalalogging.version>1.1.0</scalalogging.version>
+        <scalalogging.version>3.1.0</scalalogging.version>
+        <log4j.version>1.2.17</log4j.version>
 
-        <avro.version>1.7.5</avro.version>
+        <junit.version>4.5</junit.version>
+        <specs2.version>2.3.13</specs2.version>
     </properties>
-
 
     <dependencies>
         <dependency>
             <groupId>org.locationtech.geomesa</groupId>
-            <artifactId>geomesa-core-accumulo1.5</artifactId>
+            <artifactId>geomesa-raster</artifactId>
             <version>${geomesa.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.geotools</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.vividsolutions</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
-        <dependency>
-            <groupId>org.locationtech.geomesa</groupId>
-            <artifactId>geomesa-utils-accumulo1.5</artifactId>
-            <version>${geomesa.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.geotools</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.vividsolutions</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-      <dependency>
-          <groupId>org.locationtech.geomesa</groupId>
-          <artifactId>geomesa-jobs-accumulo1.5</artifactId>
-          <version>${geomesa.version}</version>
-          <exclusions>
-              <exclusion>
-                  <groupId>org.geotools</groupId>
-                  <artifactId>*</artifactId>
-              </exclusion>
-          </exclusions>
-      </dependency>
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
             <version>${scala.version}</version>
         </dependency>
         <dependency>
-          <groupId>com.google.guava</groupId>
-          <artifactId>guava</artifactId>
+            <groupId>javax.media</groupId>
+            <artifactId>jai_core</artifactId>
         </dependency>
         <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.avro</groupId>
-            <artifactId>avro</artifactId>
-            <version>${avro.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.typesafe</groupId>
-            <artifactId>scalalogging-slf4j_2.10</artifactId>
-            <version>${scalalogging.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.7.5</version>
+            <groupId>javax.media</groupId>
+            <artifactId>jai_imageio</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>org.apache.accumulo</groupId>
-            <artifactId>accumulo-core</artifactId>
-            <version>${accumulo.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-client</artifactId>
-            <version>2.2.0</version>
+            <groupId>org.geoserver.web</groupId>
+            <artifactId>gs-web-core</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.wicket</groupId>
@@ -147,28 +90,158 @@ application directory.
             <artifactId>spring-webmvc</artifactId>
         </dependency>
 
-        <!-- test deps -->
+        <!-- logging deps-->
+        <dependency>
+            <groupId>com.typesafe.scala-logging</groupId>
+            <artifactId>scala-logging_2.11</artifactId>
+            <version>${scalalogging.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
+            <version>${slf4j.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
+            <version>${log4j.version}</version>
+            <scope>provided</scope>
         </dependency>
+
+        <!-- test deps -->
         <dependency>
             <groupId>org.specs2</groupId>
             <artifactId>specs2_2.10</artifactId>
-            <version>2.3.13</version>
+            <version>${specs2.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
-          <groupId>org.apache.accumulo</groupId>
-          <artifactId>accumulo-test</artifactId>
-          <version>${accumulo.version}</version>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
+    <profiles>
+        <profile>
+            <id>zinc</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>net.alchim31.maven</groupId>
+                        <artifactId>scala-maven-plugin</artifactId>
+                        <configuration>
+                            <recompileMode>incremental</recompileMode>
+                            <useZincServer>true</useZincServer>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>2.3.2</version>
+                    <configuration>
+                        <source>1.7</source>
+                        <target>1.7</target>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>2.4</version>
+                </plugin>
+                <plugin>
+                    <groupId>net.alchim31.maven</groupId>
+                    <artifactId>scala-maven-plugin</artifactId>
+                    <version>3.2.0</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-release-plugin</artifactId>
+                    <version>2.4</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+
+        <plugins>
+            <plugin>
+                <groupId>net.alchim31.maven</groupId>
+                <artifactId>scala-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>scala-compile-first</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                            <goal>compile</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>scala-test-compile</id>
+                        <phase>process-test-resources</phase>
+                        <goals>
+                            <goal>testCompile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <jvmArgs>
+                        <jvmArg>-Xms1024m</jvmArg>
+                        <jvmArg>-Xmx8G</jvmArg>
+                        <jvmArg>-Duser.timezone=UTC</jvmArg>
+                        <jvmArg>-XX:MaxPermSize=1024m</jvmArg>
+                    </jvmArgs>
+                    <args>
+                        <arg>-nowarn</arg>
+                        <arg>-unchecked</arg>
+                        <arg>-deprecation</arg>
+                    </args>
+                    <scalaVersion>${scala.version}</scalaVersion>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <repositories>
+        <repository>
+            <id>geomesa-releases</id>
+            <url>https://repo.locationtech.org/content/repositories/geomesa-releases/</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>geomesa-snapshots</id>
+            <url>https://repo.locationtech.org/content/repositories/geomesa-snapshots/</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>geotools</id>
+            <url>http://download.osgeo.org/webdav/geotools</url>
+        </repository>
+        <repository>
+            <id>boundlessgeo</id>
+            <url>http://repo.boundlessgeo.com/main</url>
+        </repository>
         <repository>
             <id>conjars.org</id>
             <url>http://conjars.org/repo</url>
